<resources>
    <string name="app_name">InfrastructureComplaints</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="text_signup">Don\'t have an account ?</string>
    <string name="text_name">Name</string>
    <string name="text_newpassword">New Password</string>
    <string name="text_dob">DD-MM-YYYY</string>
    <string name="text_contact">Contact No.</string>
    <string name="button_register">Sign Up</string>
    <string name="text_subject">Subject</string>
    <string name="text_user">User</string>
    <string name="text_description">Description</string>
    <string name="button_feedback">Feedback</string>
    <string name="button_image">View Image</string>
    <string name="text_lodged_user">Lodged By User</string>
    <string name="text_status_heading">Status</string>
    <string name="text_status">stat</string>
    <string name="button_lodge">Lodge</string>
    <string name="text_feedback_heading">Write Feedback</string>
    <string name="button_submit_f">Submit Feedback</string>
</resources>
