<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage"
    tools:context=".RegistrationActivity">

    <EditText
        android:id="@+id/text_name"
        android:layout_width="353dp"
        android:layout_height="63dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/text_name"
        android:inputType="textPersonName"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="353dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColor="@color/White"
        android:hint="@string/text_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <EditText
        android:id="@+id/text_dob"
        android:layout_width="353dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/text_dob"
        android:textColor="@color/White"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_newpassword" />


    <EditText
        android:id="@+id/text_newpassword"
        android:layout_width="353dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:textColor="@color/White"
        android:hint="@string/text_newpassword"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <EditText
        android:id="@+id/text_contact"
        android:layout_width="353dp"
        android:layout_height="63dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/text_contact"
        android:inputType="textPersonName"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dob" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="133dp"
        android:layout_height="53dp"
        android:layout_marginBottom="100dp"
        android:background="@color/Green"
        android:onClick="signup"
        android:text="@string/button_signup"
        android:textColor="@color/White"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_contact"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>